--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@ if(!(window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNo
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', '{"tracking_id"=>"UA-123883708-1"}', 'auto');
+  ga('create', '{"tracking_id"=>"UA-XXXXXXXX-X"}', 'auto');
   ga('send', 'pageview');
 }
 </script>
@@ -98,7 +98,7 @@ if(!(window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNo
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-123883708-1', 'auto');
+    ga('create', 'UA-XXXXXXXX-X', 'auto');
     ga('send', 'pageview');
 </script>
 </html>
