--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,19 @@
 {"name":"Crypto Risk Control","description":"Crypto Risk Control Indices are maintained by Forever Investment Solutions, a Swiss fintech building asset allocation and data analytics tools for long-run investors.","@type":"WebSite","url":"http://cryptoriskcontrol.com//about/","headline":"About us","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css">
-    <link rel="icon" href="/assets/images/icons/favicon.ico"><link type="application/atom+xml" rel="alternate" href="http://cryptoriskcontrol.com//feed.xml" title="Crypto Risk Control" /><script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js"></script>
+    <link rel="icon" href="/assets/images/icons/favicon.ico"><link type="application/atom+xml" rel="alternate" href="http://cryptoriskcontrol.com//feed.xml" title="Crypto Risk Control" /><script>
+if(!(window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNotTrack === "yes" || navigator.msDoNotTrack === "1")) {
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', '{"tracking_id"=>"UA-123883708-1"}', 'auto');
+  ga('send', 'pageview');
+}
+</script>
+  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js"></script>
 
     <script src="/assets/scripts/smooth-scroll.js"></script>
     <script src="https://code.highcharts.com/stock/highstock.js"></script>
@@ -154,5 +166,14 @@ running a multi-billion ETF portfolio.</p>
 </script>
 
 </body>
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123883708-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123883708-1');
+</script>
+
 </html>
