Update Month perf to Month to Date

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ if(!(window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNo
                 <span id="data-return-summary-0" class="value"></span>
             </div>
             <div class="data">
-                <span class="label">M:</span>
+                <span class="label">MTD:</span>
                 <span id="data-return-summary-2" class="value"></span>
             </div>
             <div class="data">
